samples/_failures_safe/1761316530_f9b08d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db8245ce.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_db8245ce.c:170:9: error: expected declaration or statement at end of input
  170 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_db8245ce.c:170:9: error: expected declaration or statement at end of input
